# M4OEP-jollerhe

./: .gitattributes  .gitignore  App.cpp  App.h  CMakeLists.txt  CMakePresets.json  README.md  ai_predicting.py  ai_training.py  main.cpp
AI/: ai_predicting.py  ai_training.py
Application/: App.cpp  App.h  console_main.cpp  main.cpp  testing.cpp
Gui/: AppPaths.cpp  AppPaths.h  DataPipelineInitializer.cpp  DataPipelineInitializer.h  HouseDetailForm.ui  MainWindow.cpp  MainWindow.h  SearchForm.ui
HouseObjects/: House.cpp  House.h  HouseManager.cpp  HouseManager.h  HouseStatistics.cpp  HouseStatistics.h
Menu/: Menu.cpp  Menu.h
Pipeline/: DataPipeline.cpp  DataPipeline.h
Sorting/: HeapSort.cpp  HeapSort.h
data/: bad_test_data.csv  test_data.csv
